--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,4 +57,14 @@ head {
 	margin-top: 300px;
 	bottom: 0px;
 }
+.page-wrap {
+	min-height: 100%;
+	margin-bottom: -142px;
+}
+.page-wrap:after {
+	height: 142px;
+}
+.site-footer {
+	
+}
 
