--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,3 +213,86 @@ input[type=submit] {
 	padding: 10px 30px;
 	cursor: pointer;
 }
+
+/*Media Queries*/
+
+<meta name="viewport" content="width=device-width,initial">
+@media screen and (max-width: 980px) {
+
+} 
+
+@media screen and (max-width: 786px) {
+	.container{
+
+		width: 90%;
+		max-width: 75%;
+	}
+	nav {
+		width: 50%;
+		margin-top: 2%;
+	}
+	#logo {
+		width: 40%;
+		margin-right: 10%;
+		margin-left: 0%
+	}
+	.sidebar {
+		padding: 4.5%;
+		width: 100%;
+		max-width: 95%;
+		margin-bottom: 5%;
+		margin-right: 5%;
+	}
+	#main-container {
+		width: 75%;
+		
+	}
+	.main-section {
+		max-width: 95%;
+	}
+	.work {
+		width: 45%;
+	}
+
+}
+@media screen and (max-width: 640px) {
+	#masthead {
+		position: static;
+		margin-bottom: 0%;
+	}
+	.container {
+		width: 100%;
+		max-width: 81.5%;
+		margin-left: 5%;
+	}
+	#main-container {
+		width: 100%;
+		margin-left: 9%;
+	}
+	nav {
+		width: 100%;
+		margin-top: 3%;
+		margin-bottom: 3%;
+	}
+	nav a {
+		padding-right: 5%;
+		padding-left: 7%;
+		padding-top: 2%;
+		padding-bottom: 2%;
+		margin-left: 5%;
+	}
+	#logo {
+		width: 117%;
+	}
+	.sidebar {
+		padding: 4.5%;
+		width: 100%;
+		max-width: 95%;
+	}
+	.work {
+		width: 100%;
+	}
+	.main-section {
+		width: 100%;
+	}
+}
