--- a/views/index.html
+++ b/views/index.html
@@ -206,7 +206,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate action="mailto:shaina.veloz@gmail.com" method="post">
+                    <form name="sentMessage" id="contactForm" novalidate action="mailto:shaina.veloz@gmail.com?subject=Test" method="post" enctype="text/plain">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
