--- a/views/index.html
+++ b/views/index.html
@@ -88,28 +88,56 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-3 portfolio-item">
+                <div class="col-md-3 col-sm-4 portfolio-item">
+                    <a href="https://github.com/shainaveloz/Doggie-Daycare" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
                         <img src="./img/portfolio/dog.jpg" class="img-responsive" alt="">
+                    </a>
                     <div class="portfolio-caption">
-                        <a href="https://github.com/shainaveloz/Doggie-Daycare"><h4>Doggie Daycare</h4></a>
+                        <h4>Doggie Daycare</h4>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 portfolio-item">
-                        <img src="img/portfolio/sailor_moon.jpg" class="img-responsive" alt="">
+                <div class="col-md-3 col-sm-4 portfolio-item">
+                    <a href="http://sheltered-spire-81004.herokuapp.com/" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/sailor_moon_2.jpg" class="img-responsive" alt="">
+                    </a>
                     <div class="portfolio-caption">
-                        <a href="http://sheltered-spire-81004.herokuapp.com/"><h4>Crystal Game</h4></a>
+                        <h4>Crystal Game</h4>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 portfolio-item">
+                <div class="col-md-3 col-sm-4 portfolio-item">
+                    <a href="https://github.com/shainaveloz/DevMatch" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
                         <img src="img/portfolio/code2.jpg" class="img-responsive" alt="">
+                    </a>
                     <div class="portfolio-caption">
-                        <a href="https://github.com/shainaveloz/DevMatch"><h4>DevMatch</h4></a>
+                        <h4>DevMatch</h4>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 portfolio-item">
-                        <img src="img/portfolio/res-1.jpg" class="img-responsive" alt="">
+                <div class="col-md-3 col-sm-4 portfolio-item">
+                    <a href="https://github.com/shainaveloz/res-ticket-app" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/res_1.jpg" class="img-responsive" alt="">
+                    </a>
                     <div class="portfolio-caption">
-                        <a href="https://github.com/shainaveloz/res-ticket-app"><h4>Hot Ticket</h4></a>
+                        <h4>Hot Ticket</h4>
                     </div>
                 </div>
             </div>
@@ -243,21 +271,13 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <span class="copyright">Copyright &copy; Shaina Veloz 2016</span>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <ul class="list-inline social-buttons">
                         <li><a class="white-text" href="https://www.linkedin.com/in/shaina-veloz-1884433b?trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
                         <li><a class="white-text" href="https://github.com/shainaveloz?tab=overview&from=2016-08-01&to=2016-08-31&utf8=%E2%9C%93"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
                     </ul>
                 </div>
             </div>
