added different photos and fixed some pixel problems

--- a/views/index.html
+++ b/views/index.html
@@ -157,7 +157,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="./img/about/background_2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -171,7 +171,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="./img/about/background_3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -185,7 +185,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="./img/about/background2.jpeg" alt="">
+                                <img class="img-circle img-responsive" src="./img/about/background_2.jpg" alt="" height="157px" width="157px">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -276,8 +276,10 @@
                 </div>
                 <div class="col-md-6">
                     <ul class="list-inline social-buttons">
-                        <li><a class="white-text" href="https://www.linkedin.com/in/shaina-veloz-1884433b?trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
-                        <li><a class="white-text" href="https://github.com/shainaveloz?tab=overview&from=2016-08-01&to=2016-08-31&utf8=%E2%9C%93"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
+                        <li><a href="https://github.com/shainaveloz?tab=overview&from=2016-08-01&to=2016-08-31&utf8=%E2%9C%93"><i class="fa fa-github"></i></a>
+                        </li>
+                        <li><a href="https://www.linkedin.com/in/shaina-veloz-1884433b?trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
