fixed photo problems

--- a/views/index.html
+++ b/views/index.html
@@ -171,7 +171,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="./img/about/background_3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="./img/about/background_3.jpg" alt="" style="height: 158px; width: 156px">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -179,13 +179,13 @@
                                     <h4 class="subheading">A Fresh Start</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I recently embarked on a career change to become a web developer. My interest sparked while working at the Institute for Simulation and Training (IST)- NASA-gOE lab where coding became one of my responsibilities. Since then, I’ve enrolled in the first cohort of the University of Central Florida's Coding Boot Camp. As a Front End Developer, I’m proficient in HTML5, CSS3, JavaScript, JQuery, JSON API, AJAX, Firebase, GitHub, Heroku, and command line. In addition, I have completed studying Back End Development working with languages such as Node.js, Express.js, React.js, Angular.js, MySQL, Mongo DB, Handlebars.js and PHP frameworks such as Laravel where I’ll become a Full Stack Web Developer upon my graduation in late September.</p>
+                                    <p class="text-muted">I recently embarked on a career change to become a web developer. My interest sparked while working at the Institute for Simulation and Training (IST)- NASA-gOE lab where coding became one of my responsibilities. Since then, I’ve enrolled in the first cohort of the University of Central Florida's Coding Boot Camp. As a Front End Developer, I’m proficient in HTML5, CSS3, JavaScript, JQuery, JSON API, AJAX, Firebase, GitHub, Heroku, and command line. In addition, I have completed studying Back End Development working with languages such as Node.js, Express.js, React.js, Angular.js, MySQL, Mongo DB, Handlebars.js and PHP frameworks such as Laravel where I became a Full Stack Web Developer upon my graduation in late September.</p>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="./img/about/background_2.jpg" alt="" height="157px" width="157px">
+                                <img class="img-circle img-responsive" src="./img/about/office.jpeg" alt="" style="height: 156px; width: 156px">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -286,10 +286,6 @@
         </div>
     </footer>
 
-    <!-- Portfolio Modals -->
-    <!-- Use the modals below to showcase details about your portfolio projects! -->
-
-    <!-- Portfolio Modal 1 -->
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
