--- a/views/css/agency.css
+++ b/views/css/agency.css
@@ -556,8 +556,8 @@ aside.clients img {
 section#contact {
   background-color: #222222;
   background-image: url('../img/background_5.jpeg');
-  background-position: center;
-  background-repeat: no-repeat;
+  background-position: initial;
+  background-repeat: round;
 }
 section#contact .section-heading {
   color: white;
