fixed more bugs

--- a/views/index.html
+++ b/views/index.html
@@ -193,7 +193,7 @@
                                     <h4 class="subheading">Transition</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> I’m in the market for a Jr. Web Developer, Full Stack Web Developer or Software Developer opportunities and am open to relocating.  Please feel free to message me directly or contact me</p>
+                                    <p class="text-muted"> I’m in the market for a Jr. Web Developer, Full Stack Web Developer or Software Developer opportunities and am open to relocating.  Please feel free to message me directly</p>
                                 </div>
                             </div>
                         </li>
