edited some paragraphs

--- a/views/index.html
+++ b/views/index.html
@@ -165,7 +165,7 @@
                                     <h4 class="subheading">My Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hi There! You have found my page! My name is Shaina Veloz and I am originally from the Bronx,NY but I was also raised in Miami,FL. I graduated from the University of Central Florida with a Bachelors of Science degree in Psychology and I am currently enrolled within the UCF Coding Bootcamp with hopes of learning more about coding and eventually being able to work within the gaming industry.</p>
+                                    <p class="text-muted">Hi There! You have found my page! My name is Shaina Veloz and I am originally from the Bronx,NY but I was also raised in Miami,FL. I graduated from the University of Central Florida with a Bachelors of Science degree in Psychology and I recently completed the UCF Coding Bootcamp with hopes of strengthening my coding skills and eventually being able to work within the Web Development field.</p>
                                 </div>
                             </div>
                         </li>
