--- a/views/index.html
+++ b/views/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate action="mailto:shaina.veloz@gmail.com?subject=Test" method="post" enctype="text/plain">
+                    <form name="sentMessage" id="contactForm" novalidate action="./mail/contact_me.php" method="post" enctype="text/plain">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -297,8 +297,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="./js/jqBootstrapValidation.js"></script>
+    <script src="./js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
