--- a/views/index.html
+++ b/views/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate action="./js/contact_me.js" method="post" enctype="text/plain">
+                    <form name="sentMessage" id="contactForm" novalidate method="post" enctype="text/plain">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
