--- a/views/index.html
+++ b/views/index.html
@@ -12,17 +12,11 @@
     <title>Shaina Veloz</title>
 
     <!-- Bootstrap Core CSS -->
-<<<<<<< HEAD
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="./vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-=======
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
->>>>>>> 81baf8d8ac17f90e29e512c1c11d97f5eef0ac5f
+    <link href="./assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -40,7 +34,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" ng-view>
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -122,11 +116,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 portfolio-item">
-<<<<<<< HEAD
                     <a href="http://intense-beyond-92806.herokuapp.com/" class="portfolio-link" data-toggle="modal">
-=======
-                    <a href="https://github.com/shainaveloz/DevMatch" class="portfolio-link" data-toggle="modal">
->>>>>>> 81baf8d8ac17f90e29e512c1c11d97f5eef0ac5f
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -245,7 +235,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" href="mailto:shaina.veloz@gmail.com?Subject=Hello%20again" >
+                    <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -298,6 +288,9 @@
     </footer>
 
 
+
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
     <!-- jQuery -->
     <script src="./assets/vendor/jquery/jquery.min.js"></script>
 
@@ -309,8 +302,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/mail/contact.js"></script>
+    <!--<script src="./js/jqBootstrapValidation.js"></script>-->
+    <!--<script src="./js/contact_me.js"></script>-->
+    <!--<script src="./js/mail/contact.js"></script>-->
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
